--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-    crossorigin="anonymous"></script>
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="style.css">
     <title>Bootstrap Fun</title>
@@ -16,36 +16,52 @@
 
 <body>
     <main class="mainContent">
-        <div class="container text-center">
-            <h3 class="promote">Promote Your Online Course Like A Pro</h3>
-            <h1 class="title"><span class="symbol">{  </span>DevCourse<span class="symbol">  }</span></h1>
-            <h2 class="title-discription">A Course Landing Page Template For Developers</h2>
-            <button type="button" class="btn btn-secondary" class="startBtn">Start Learning Now</button>
+        <div class="container text-center py-lg-5 py-3" >
+            <span class="promote">Promote Your Online Course Like A Pro</span>
+            <h1 class="title"><span class="symbol">{ </span>DevCourse<span class="symbol"> }</span></h1>
+            <h5 class="title-discription">A Course Landing Page Template For Developers</h5>
+            <button class="startBtn">Start Learning Now</button>
             <div class="row">
                 <div class="col-sm">
-                    <span class="icon"><i class="fa fa-video-camera"></i>  Content</span>
+                    <span class="icon"><i class="fa fa-video-camera"></i> Content</span>
                     <p class="icon-discription">80+ Videos</p>
                 </div>
                 <div class="col-sm">
-                    <span class="icon"><i class="fa fa-clock-o"></i>  Duration</span>
+                    <span class="icon"><i class="fa fa-clock-o"></i> Duration</span>
                     <p class="icon-discription">72 Hours</p>
                 </div>
                 <div class="col-sm">
-                    <span class="icon"><i class="fa fa-user"></i>  Access</span>
+                    <span class="icon"><i class="fa fa-user"></i> Access</span>
                     <p class="icon-discription">Lifetime</p>
                 </div>
             </div>
         </div>
+        <nav class="nav-footer">
+            <div class="row">
+                <div class="col">
+                    <a href="#">Overview</a>
+                </div>
+                <div class="col">
+                    <a href="#">Content</a>
+                </div>
+                <div class="col">
+                    <a href="#">Requirements</a>
+                </div>
+                <div class="col">
+                    <a href="#">Tutor</a>
+                </div>
+                <div class="col">
+                    <a href="#">Reviews</a>
+                </div>
+                <div class="col">
+                    <a href="#">Pricing</a>
+                </div>
+                <div class="col">
+                    <a href="#">FAQ</a>
+                </div>
+            </div>
+        </nav>
     </main>
-    <nav class="nav-footer">
-        <a href="#">Overview</a>
-        <a href="#">Content</a>
-        <a href="#">Requirements</a>
-        <a href="#">Tutor</a>
-        <a href="#">Reviews</a>
-        <a href="#">Pricing</a>
-        <a href="#">FAQ</a>
-    </nav>
 </body>
 
 </html>
