finished the project

--- a/index.html
+++ b/index.html
@@ -16,23 +16,33 @@
 
 <body>
     <main class="mainContent">
-        <div class="container text-center py-lg-5 py-3" >
-            <span class="promote">Promote Your Online Course Like A Pro</span>
-            <h1 class="title"><span class="symbol">{ </span>DevCourse<span class="symbol"> }</span></h1>
-            <h5 class="title-discription">A Course Landing Page Template For Developers</h5>
-            <button class="startBtn">Start Learning Now</button>
-            <div class="row">
-                <div class="col-sm">
-                    <span class="icon"><i class="fa fa-video-camera"></i> Content</span>
-                    <p class="icon-discription">80+ Videos</p>
-                </div>
-                <div class="col-sm">
-                    <span class="icon"><i class="fa fa-clock-o"></i> Duration</span>
-                    <p class="icon-discription">72 Hours</p>
-                </div>
-                <div class="col-sm">
-                    <span class="icon"><i class="fa fa-user"></i> Access</span>
-                    <p class="icon-discription">Lifetime</p>
+        <div class="container text-center py-lg-5 py-3">
+            <div class="my-lg-4 my-3 ">
+                <span class="promote">Promote Your Online Course Like A Pro</span>
+            </div>
+            <div class="my-lg-4 my-3">
+                <h1 class="title"><span class="symbol">{ </span>DevCourse<span class="symbol"> }</span></h1>
+            </div>
+            <div class="my-lg-4 my-3">
+                <h5 class="title-discription">A Course Landing Page Template For Developers</h5>
+            </div>
+            <div class="my-lg-5 my-3">
+                <button class="startBtn">Start Learning Now</button>
+            </div>
+            <div class="my-lg-5 my-3">
+                <div class="row">
+                    <div class="col-sm">
+                        <span class="icon"><i class="fa fa-video-camera"></i> Content</span>
+                        <p class="icon-discription">80+ Videos</p>
+                    </div>
+                    <div class="col-sm">
+                        <span class="icon"><i class="fa fa-clock-o"></i> Duration</span>
+                        <p class="icon-discription">72 Hours</p>
+                    </div>
+                    <div class="col-sm">
+                        <span class="icon"><i class="fa fa-user"></i> Access</span>
+                        <p class="icon-discription">Lifetime</p>
+                    </div>
                 </div>
             </div>
         </div>
